syntax = "proto3";

package dapi.v1;

import "google/api/annotations.proto";
import "model/v1/osint.proto";

option go_package = "github.com/omnsight/omndapi/gen/dapi/v1;dapi";

// RelationshipService provides operations for managing relationships between entities
service RelationshipService {
  rpc CreateRelationship(CreateRelationshipRequest) returns (CreateRelationshipResponse) {
    option (google.api.http) = {
      post: "/v1/relationships"
      body: "relationship"
    };
  }

  rpc UpdateRelationship(UpdateRelationshipRequest) returns (UpdateRelationshipResponse) {
    option (google.api.http) = {
      put: "/v1/relationships/{collection}/{key}"
      body: "relationship"
    };
  }

  rpc DeleteRelationship(DeleteRelationshipRequest) returns (DeleteRelationshipResponse) {
    option (google.api.http) = {delete: "/v1/relationships/{collection}/{key}"};
  }
}

// Relationship messages
message CreateRelationshipRequest {
  model.v1.Relation relationship = 1;
}

message CreateRelationshipResponse {
  model.v1.Relation relationship = 1;
}

message UpdateRelationshipRequest {
  string collection = 1;
  string key = 2;
  model.v1.Relation relationship = 3;
}

message UpdateRelationshipResponse {
  model.v1.Relation relationship = 1;
}

message DeleteRelationshipRequest {
  string collection = 1;
  string key = 2;
}

message DeleteRelationshipResponse {}
